[package]
name = "my-sb-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git" }

my-service-bus-macros = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-macros.git" }

rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["full"] }
